# services/account/docs/swagger.json
@@ -34,6 +34,11 @@
                 "responses": {}
             },
             "post": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
                 "description": "Create account",
                 "consumes": [
                     "application/json"
@@ -53,6 +58,38 @@
                         "required": true,
                         "schema": {
                             "$ref": "#/definitions/model.CreateAccount"
+                        }
+                    }
+                ],
+                "responses": {}
+            }
+        },
+        "/account/topup": {
+            "post": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
+                "description": "Top up account",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "account"
+                ],
+                "summary": "Top up account",
+                "parameters": [
+                    {
+                        "description": "Top up information",
+                        "name": "topUp",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/model.TopUp"
                         }
                     }
                 ],
@@ -96,6 +133,17 @@
                     "type": "string"
                 },
                 "type": {
+                    "type": "string"
+                }
+            }
+        },
+        "model.TopUp": {
+            "type": "object",
+            "properties": {
+                "amount": {
+                    "type": "number"
+                },
+                "id": {
                     "type": "string"
                 }
             }
