# services/account/route/accountRoute.go
@@ -23,6 +23,7 @@ func (ar *AccountRoute) SetupAccountRoute(app *fiber.App) {
 		account.Get("/", ar.accountLogic.GetAllAccount)
 		account.Get("/:id", ar.accountLogic.GetAccountByID)
 		account.Post("/", ar.accountLogic.CreateAccount)
+		account.Post("/topup", ar.accountLogic.TopUp)
 		//account.Put("/:id", ar.accountLogic.ChangePin)
 		//account.Delete("/:id", ar.accountLogic.DeleteAccount)
 		//account.Get("/clientAcc", ar.accountLogic.GetClientAccount)
