# services/gateway/logic/accountRouteLogic.go
@@ -85,3 +85,43 @@ func ForwardCreateAccount(ctx *fiber.Ctx) error {
 	// Forward the response with the same status code
 	return ctx.Status(resp.StatusCode).Send(body)
 }
+
+// ForwardTopUp godoc
+//
+// @Summary		Forward top up request to account service
+// @Description	Forward top up request to account service
+// @Tags			account
+// @Accept			json
+// @Produce		json
+// @security		Bearer
+// @Param			account	body		model.TopUp	true	"Top up information"
+// @Success		200		{string}	string			"Top up successfully"
+// @Failure		400		{string}	string			"Bad request"
+//
+// @Router			/account/topup [post]
+func ForwardTopUp(ctx *fiber.Ctx) error {
+	tokenString := ctx.Cookies("Authorization")
+
+	account := &http.Client{}
+	req, err := http.NewRequest("POST", "http://account-service:3200/api/v1/account/topup", bytes.NewReader(ctx.Body()))
+	if err != nil {
+		return err
+	}
+
+	req.Header.Set("Authorization", tokenString)
+	req.Header.Set("Content-Type", "application/json")
+
+	resp, err := account.Do(req)
+	if err != nil {
+		return err
+	}
+
+	defer resp.Body.Close()
+
+	body, err := io.ReadAll(resp.Body)
+	if err != nil {
+		return err
+	}
+
+	return ctx.Status(resp.StatusCode).Send(body)
+}
